--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.27.2",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/cli-plugin-router": "~5.0.0",
     "vite": "^2.9.5"
   }
 }
